--- a/templates/exchange_admin.html
+++ b/templates/exchange_admin.html
@@ -60,7 +60,7 @@
                     </div>
                   </td>
                   <td class="border-bottom-0">
-                    <a href="{{ url_for('iisma_view', user_id=student[0].nim) }}"><h6 class="fw-semibold mb-0 fs-4">Detail</h6></a>
+                    <a href="{{ url_for('exchange_view', user_id=student[0].nim) }}"><h6 class="fw-semibold mb-0 fs-4">Detail</h6></a>
                   </td>
                 </tr> 
                 {% endfor %}
