--- a/templates/home_mahasiswa.html
+++ b/templates/home_mahasiswa.html
@@ -11,48 +11,22 @@
         </div>
         <div class="card-body pt-3 p-4">
           <h6 class="fw-semibold fs-4">IISMA</h6>
-          <div class="d-flex align-items-center justify-content-between">
+          <!-- <div class="d-flex align-items-center justify-content-between">
             <h6 class="fw-semibold fs-4 mb-0">$50 <span class="ms-2 fw-normal text-muted fs-3"><del>$65</del></span></h6>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-xl-3">
       <div class="card overflow-hidden rounded-2">
         <div class="position-relative">
-          <a href="{{ url_for('exchange')}}"><img src="{{ url_for('static', filename='/images/iisma-2023-2.jpg')}}" class="card-img-top rounded-0" alt="..."></a>
+          <a href="{{ url_for('exchange')}}"><img src="{{ url_for('static', filename='/images/student_exchange2.jpg')}}" class="card-img-top rounded-0" alt="..."></a>
         </div>
         <div class="card-body pt-3 p-4">
           <h6 class="fw-semibold fs-4">Exchange</h6>
-          <div class="d-flex align-items-center justify-content-between">
+          <!-- <div class="d-flex align-items-center justify-content-between">
             <h6 class="fw-semibold fs-4 mb-0">$650 <span class="ms-2 fw-normal text-muted fs-3"><del>$900</del></span></h6>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-xl-3">
-      <div class="card overflow-hidden rounded-2">
-        <div class="position-relative">
-          <a href="javascript:void(0)"><img src="{{ url_for('static', filename='/images/products/s7.jpg') }}" class="card-img-top rounded-0" alt="..."></a>
-        </div>
-        <div class="card-body pt-3 p-4">
-          <h6 class="fw-semibold fs-4">Soon</h6>
-          <div class="d-flex align-items-center justify-content-between">
-            <h6 class="fw-semibold fs-4 mb-0">$150 <span class="ms-2 fw-normal text-muted fs-3"><del>$200</del></span></h6>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-xl-3">
-      <div class="card overflow-hidden rounded-2">
-        <div class="position-relative">
-          <a href="javascript:void(0)"><img src="{{ url_for('static', filename='/images/products/s11.jpg') }}" class="card-img-top rounded-0" alt="..."></a>
-        </div>
-        <div class="card-body pt-3 p-4">
-          <h6 class="fw-semibold fs-4">Soon</h6>
-          <div class="d-flex align-items-center justify-content-between">
-            <h6 class="fw-semibold fs-4 mb-0">$285 <span class="ms-2 fw-normal text-muted fs-3"><del>$345</del></span></h6>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
