--- a/templates/iisma_admin.html
+++ b/templates/iisma_admin.html
@@ -7,7 +7,7 @@
     <div class="card">
       <div class="card-body">
         <div class="card-body p-4">
-          <h5 class="card-title fw-semibold mb-4">Recent Transactions</h5>
+          <h5 class="card-title fw-semibold mb-4">Recent Update</h5>
           <div class="table-responsive">
             <table class="table text-nowrap mb-0 align-middle">
               <thead class="text-dark fs-4">
